feat: Notification permission

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "generate-pwa-assets": "pwa-assets-generator --preset minimal public/logo.png"
   },
   "dependencies": {
+    "@vueuse/core": "^10.3.0",
     "axios": "^1.4.0",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
